# scopesafe

./: .gitignore  Cargo.toml  Dockerfile  README.md  SPEC.md  docker-compose.yml
.github/workflows/: ci.yml
evidence/: BUILD-REPORT.md  V1.0-BUILD-REPORT.md
scripts/: run-e2e.sh
src/: auditor.rs  cli.rs  db.rs  error.rs  lib.rs  main.rs  mcp.rs  patterns.rs  report.rs  scope.rs  tracker.rs
tests/integration/: cli_e2e_test.rs  mcp_e2e_test.rs
tests/unit/: mcp_test.rs  patterns_test.rs  report_test.rs  scope_test.rs  tracker_test.rs
