[package]
name = "scopesafe"
version = "0.2.0"
edition = "2021"
authors = ["Nicolas Alcaraz <nicolasalca@hotmail.com>"]
description = "AI Agent Scope Guardrail — define scope, track changes, audit results"
license = "MIT"
repository = "https://github.com/dablon/scopesafe"
keywords = ["ai", "agent", "scope", "guardrail", "mcp", "claude-code", "cursor"]
rust-version = "1.75"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
ignore = "0.4"
anyhow = "1.0"
thiserror = "2.0"
indicatif = "0.17"
colored = "2.0"
dirs = "5.0"
walkdir = "2.4"
uuid = { version = "1.10", features = ["v4"] }

[dev-dependencies]
tempfile = "3.12"
pretty_assertions = "1.4"
mockall = "0.13"
assert_cmd = "2.0"
predicates = "3.1"

[[bin]]
name = "scopesafe"
path = "src/main.rs"

[lib]
name = "scopesafe"
path = "src/lib.rs"

[[test]]
name = "scope_test"
path = "tests/unit/scope_test.rs"

[[test]]
name = "tracker_test"
path = "tests/unit/tracker_test.rs"

[[test]]
name = "patterns_test"
path = "tests/unit/patterns_test.rs"

[[test]]
name = "report_test"
path = "tests/unit/report_test.rs"

[[test]]
name = "mcp_test"
path = "tests/unit/mcp_test.rs"

[[test]]
name = "cli_e2e_test"
path = "tests/integration/cli_e2e_test.rs"

[[test]]
name = "mcp_e2e_test"
path = "tests/integration/mcp_e2e_test.rs"
